--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="content">
         <img src="images/placeholder_picture.png">
         <h1>CIERA DELA CRUZ</h1>
-        <p>illustrator - ux/ui designer</p>
+        <p>illustrator - ux/ui designer eep</p>
         <button id="myBtn">About</button>
       </div>
 
